// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Home Page should download the generated phone numbers when the method is called 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Home
    phoneNumbers={
      Array [
        Object {
          "randomPhoneNumber": 12345,
        },
        Object {
          "randomPhoneNumber": 67890,
        },
      ]
    }
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "checkPropTypes": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <nav
          className="navbar navbar-expand-lg navbar-dark bg-dark"
        >
          <a
            className="navbar-brand"
            href="#"
          >
            Phone Number Generator
          </a>
           
          <button
            aria-controls="navbarTogglerDemo02"
            aria-expanded="false"
            aria-label="Toggle navigation"
            className="navbar-toggler"
            data-target="#navbarTogglerDemo02"
            data-toggle="collapse"
            type="button"
          >
            <span
              className="navbar-toggler-icon"
            />
          </button>
          <div
            className="collapse navbar-collapse"
            id="navbarTogglerDemo02"
          >
            <ul
              className="navbar-nav mr-auto mt-2 mt-lg-0"
            >
              <div
                className="select-sort"
              >
                <select
                  onChange={[Function]}
                >
                  <option>
                    Sort By...
                  </option>
                  <option
                    value="Ascending"
                  >
                    Ascending
                  </option>
                  <option
                    value="Descending"
                  >
                    Descending
                  </option>
                </select>
              </div>
            </ul>
            <div
              className="form-inline"
            >
              <input
                className="form-control mr-sm-2"
                onChange={[Function]}
                placeholder="Input a number"
                type="number"
                value=""
              />
              <Button
                className="Home__btn"
                disabled={true}
                name="Generate"
                onClick={[Function]}
              />
              <Button
                className="ml-3"
                disabled={false}
                name="Download"
                onClick={[Function]}
              />
            </div>
          </div>
        </nav>,
        <div>
          <DisplayPhoneNumbers
            hasGeneratedNumbers={false}
            phoneNumbers={
              Array [
                Object {
                  "randomPhoneNumber": 12345,
                },
                Object {
                  "randomPhoneNumber": 67890,
                },
              ]
            }
          />
        </div>,
      ],
      "className": "home__container",
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <a
              className="navbar-brand"
              href="#"
            >
              Phone Number Generator
            </a>,
            " ",
            <button
              aria-controls="navbarTogglerDemo02"
              aria-expanded="false"
              aria-label="Toggle navigation"
              className="navbar-toggler"
              data-target="#navbarTogglerDemo02"
              data-toggle="collapse"
              type="button"
            >
              <span
                className="navbar-toggler-icon"
              />
            </button>,
            <div
              className="collapse navbar-collapse"
              id="navbarTogglerDemo02"
            >
              <ul
                className="navbar-nav mr-auto mt-2 mt-lg-0"
              >
                <div
                  className="select-sort"
                >
                  <select
                    onChange={[Function]}
                  >
                    <option>
                      Sort By...
                    </option>
                    <option
                      value="Ascending"
                    >
                      Ascending
                    </option>
                    <option
                      value="Descending"
                    >
                      Descending
                    </option>
                  </select>
                </div>
              </ul>
              <div
                className="form-inline"
              >
                <input
                  className="form-control mr-sm-2"
                  onChange={[Function]}
                  placeholder="Input a number"
                  type="number"
                  value=""
                />
                <Button
                  className="Home__btn"
                  disabled={true}
                  name="Generate"
                  onClick={[Function]}
                />
                <Button
                  className="ml-3"
                  disabled={false}
                  name="Download"
                  onClick={[Function]}
                />
              </div>
            </div>,
          ],
          "className": "navbar navbar-expand-lg navbar-dark bg-dark",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "Phone Number Generator",
              "className": "navbar-brand",
              "href": "#",
            },
            "ref": null,
            "rendered": "Phone Number Generator",
            "type": "a",
          },
          " ",
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "aria-controls": "navbarTogglerDemo02",
              "aria-expanded": "false",
              "aria-label": "Toggle navigation",
              "children": <span
                className="navbar-toggler-icon"
              />,
              "className": "navbar-toggler",
              "data-target": "#navbarTogglerDemo02",
              "data-toggle": "collapse",
              "type": "button",
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "className": "navbar-toggler-icon",
              },
              "ref": null,
              "rendered": null,
              "type": "span",
            },
            "type": "button",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": Array [
                <ul
                  className="navbar-nav mr-auto mt-2 mt-lg-0"
                >
                  <div
                    className="select-sort"
                  >
                    <select
                      onChange={[Function]}
                    >
                      <option>
                        Sort By...
                      </option>
                      <option
                        value="Ascending"
                      >
                        Ascending
                      </option>
                      <option
                        value="Descending"
                      >
                        Descending
                      </option>
                    </select>
                  </div>
                </ul>,
                <div
                  className="form-inline"
                >
                  <input
                    className="form-control mr-sm-2"
                    onChange={[Function]}
                    placeholder="Input a number"
                    type="number"
                    value=""
                  />
                  <Button
                    className="Home__btn"
                    disabled={true}
                    name="Generate"
                    onClick={[Function]}
                  />
                  <Button
                    className="ml-3"
                    disabled={false}
                    name="Download"
                    onClick={[Function]}
                  />
                </div>,
              ],
              "className": "collapse navbar-collapse",
              "id": "navbarTogglerDemo02",
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": <div
                    className="select-sort"
                  >
                    <select
                      onChange={[Function]}
                    >
                      <option>
                        Sort By...
                      </option>
                      <option
                        value="Ascending"
                      >
                        Ascending
                      </option>
                      <option
                        value="Descending"
                      >
                        Descending
                      </option>
                    </select>
                  </div>,
                  "className": "navbar-nav mr-auto mt-2 mt-lg-0",
                },
                "ref": null,
                "rendered": Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": <select
                      onChange={[Function]}
                    >
                      <option>
                        Sort By...
                      </option>
                      <option
                        value="Ascending"
                      >
                        Ascending
                      </option>
                      <option
                        value="Descending"
                      >
                        Descending
                      </option>
                    </select>,
                    "className": "select-sort",
                  },
                  "ref": null,
                  "rendered": Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "host",
                    "props": Object {
                      "children": Array [
                        <option>
                          Sort By...
                        </option>,
                        <option
                          value="Ascending"
                        >
                          Ascending
                        </option>,
                        <option
                          value="Descending"
                        >
                          Descending
                        </option>,
                      ],
                      "onChange": [Function],
                    },
                    "ref": null,
                    "rendered": Array [
                      Object {
                        "instance": null,
                        "key": undefined,
                        "nodeType": "host",
                        "props": Object {
                          "children": "Sort By...",
                        },
                        "ref": null,
                        "rendered": "Sort By...",
                        "type": "option",
                      },
                      Object {
                        "instance": null,
                        "key": undefined,
                        "nodeType": "host",
                        "props": Object {
                          "children": "Ascending",
                          "value": "Ascending",
                        },
                        "ref": null,
                        "rendered": "Ascending",
                        "type": "option",
                      },
                      Object {
                        "instance": null,
                        "key": undefined,
                        "nodeType": "host",
                        "props": Object {
                          "children": "Descending",
                          "value": "Descending",
                        },
                        "ref": null,
                        "rendered": "Descending",
                        "type": "option",
                      },
                    ],
                    "type": "select",
                  },
                  "type": "div",
                },
                "type": "ul",
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": Array [
                    <input
                      className="form-control mr-sm-2"
                      onChange={[Function]}
                      placeholder="Input a number"
                      type="number"
                      value=""
                    />,
                    <Button
                      className="Home__btn"
                      disabled={true}
                      name="Generate"
                      onClick={[Function]}
                    />,
                    <Button
                      className="ml-3"
                      disabled={false}
                      name="Download"
                      onClick={[Function]}
                    />,
                  ],
                  "className": "form-inline",
                },
                "ref": null,
                "rendered": Array [
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "host",
                    "props": Object {
                      "className": "form-control mr-sm-2",
                      "onChange": [Function],
                      "placeholder": "Input a number",
                      "type": "number",
                      "value": "",
                    },
                    "ref": null,
                    "rendered": null,
                    "type": "input",
                  },
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "function",
                    "props": Object {
                      "className": "Home__btn",
                      "disabled": true,
                      "name": "Generate",
                      "onClick": [Function],
                    },
                    "ref": null,
                    "rendered": null,
                    "type": [Function],
                  },
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "function",
                    "props": Object {
                      "className": "ml-3",
                      "disabled": false,
                      "name": "Download",
                      "onClick": [Function],
                    },
                    "ref": null,
                    "rendered": null,
                    "type": [Function],
                  },
                ],
                "type": "div",
              },
            ],
            "type": "div",
          },
        ],
        "type": "nav",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            false,
            <DisplayPhoneNumbers
              hasGeneratedNumbers={false}
              phoneNumbers={
                Array [
                  Object {
                    "randomPhoneNumber": 12345,
                  },
                  Object {
                    "randomPhoneNumber": 67890,
                  },
                ]
              }
            />,
          ],
        },
        "ref": null,
        "rendered": Array [
          false,
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "hasGeneratedNumbers": false,
              "phoneNumbers": Array [
                Object {
                  "randomPhoneNumber": 12345,
                },
                Object {
                  "randomPhoneNumber": 67890,
                },
              ],
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
        ],
        "type": "div",
      },
    ],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <nav
            className="navbar navbar-expand-lg navbar-dark bg-dark"
          >
            <a
              className="navbar-brand"
              href="#"
            >
              Phone Number Generator
            </a>
             
            <button
              aria-controls="navbarTogglerDemo02"
              aria-expanded="false"
              aria-label="Toggle navigation"
              className="navbar-toggler"
              data-target="#navbarTogglerDemo02"
              data-toggle="collapse"
              type="button"
            >
              <span
                className="navbar-toggler-icon"
              />
            </button>
            <div
              className="collapse navbar-collapse"
              id="navbarTogglerDemo02"
            >
              <ul
                className="navbar-nav mr-auto mt-2 mt-lg-0"
              >
                <div
                  className="select-sort"
                >
                  <select
                    onChange={[Function]}
                  >
                    <option>
                      Sort By...
                    </option>
                    <option
                      value="Ascending"
                    >
                      Ascending
                    </option>
                    <option
                      value="Descending"
                    >
                      Descending
                    </option>
                  </select>
                </div>
              </ul>
              <div
                className="form-inline"
              >
                <input
                  className="form-control mr-sm-2"
                  onChange={[Function]}
                  placeholder="Input a number"
                  type="number"
                  value=""
                />
                <Button
                  className="Home__btn"
                  disabled={true}
                  name="Generate"
                  onClick={[Function]}
                />
                <Button
                  className="ml-3"
                  disabled={false}
                  name="Download"
                  onClick={[Function]}
                />
              </div>
            </div>
          </nav>,
          <div>
            <DisplayPhoneNumbers
              hasGeneratedNumbers={false}
              phoneNumbers={
                Array [
                  Object {
                    "randomPhoneNumber": 12345,
                  },
                  Object {
                    "randomPhoneNumber": 67890,
                  },
                ]
              }
            />
          </div>,
        ],
        "className": "home__container",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <a
                className="navbar-brand"
                href="#"
              >
                Phone Number Generator
              </a>,
              " ",
              <button
                aria-controls="navbarTogglerDemo02"
                aria-expanded="false"
                aria-label="Toggle navigation"
                className="navbar-toggler"
                data-target="#navbarTogglerDemo02"
                data-toggle="collapse"
                type="button"
              >
                <span
                  className="navbar-toggler-icon"
                />
              </button>,
              <div
                className="collapse navbar-collapse"
                id="navbarTogglerDemo02"
              >
                <ul
                  className="navbar-nav mr-auto mt-2 mt-lg-0"
                >
                  <div
                    className="select-sort"
                  >
                    <select
                      onChange={[Function]}
                    >
                      <option>
                        Sort By...
                      </option>
                      <option
                        value="Ascending"
                      >
                        Ascending
                      </option>
                      <option
                        value="Descending"
                      >
                        Descending
                      </option>
                    </select>
                  </div>
                </ul>
                <div
                  className="form-inline"
                >
                  <input
                    className="form-control mr-sm-2"
                    onChange={[Function]}
                    placeholder="Input a number"
                    type="number"
                    value=""
                  />
                  <Button
                    className="Home__btn"
                    disabled={true}
                    name="Generate"
                    onClick={[Function]}
                  />
                  <Button
                    className="ml-3"
                    disabled={false}
                    name="Download"
                    onClick={[Function]}
                  />
                </div>
              </div>,
            ],
            "className": "navbar navbar-expand-lg navbar-dark bg-dark",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "Phone Number Generator",
                "className": "navbar-brand",
                "href": "#",
              },
              "ref": null,
              "rendered": "Phone Number Generator",
              "type": "a",
            },
            " ",
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "aria-controls": "navbarTogglerDemo02",
                "aria-expanded": "false",
                "aria-label": "Toggle navigation",
                "children": <span
                  className="navbar-toggler-icon"
                />,
                "className": "navbar-toggler",
                "data-target": "#navbarTogglerDemo02",
                "data-toggle": "collapse",
                "type": "button",
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "className": "navbar-toggler-icon",
                },
                "ref": null,
                "rendered": null,
                "type": "span",
              },
              "type": "button",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": Array [
                  <ul
                    className="navbar-nav mr-auto mt-2 mt-lg-0"
                  >
                    <div
                      className="select-sort"
                    >
                      <select
                        onChange={[Function]}
                      >
                        <option>
                          Sort By...
                        </option>
                        <option
                          value="Ascending"
                        >
                          Ascending
                        </option>
                        <option
                          value="Descending"
                        >
                          Descending
                        </option>
                      </select>
                    </div>
                  </ul>,
                  <div
                    className="form-inline"
                  >
                    <input
                      className="form-control mr-sm-2"
                      onChange={[Function]}
                      placeholder="Input a number"
                      type="number"
                      value=""
                    />
                    <Button
                      className="Home__btn"
                      disabled={true}
                      name="Generate"
                      onClick={[Function]}
                    />
                    <Button
                      className="ml-3"
                      disabled={false}
                      name="Download"
                      onClick={[Function]}
                    />
                  </div>,
                ],
                "className": "collapse navbar-collapse",
                "id": "navbarTogglerDemo02",
              },
              "ref": null,
              "rendered": Array [
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": <div
                      className="select-sort"
                    >
                      <select
                        onChange={[Function]}
                      >
                        <option>
                          Sort By...
                        </option>
                        <option
                          value="Ascending"
                        >
                          Ascending
                        </option>
                        <option
                          value="Descending"
                        >
                          Descending
                        </option>
                      </select>
                    </div>,
                    "className": "navbar-nav mr-auto mt-2 mt-lg-0",
                  },
                  "ref": null,
                  "rendered": Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "host",
                    "props": Object {
                      "children": <select
                        onChange={[Function]}
                      >
                        <option>
                          Sort By...
                        </option>
                        <option
                          value="Ascending"
                        >
                          Ascending
                        </option>
                        <option
                          value="Descending"
                        >
                          Descending
                        </option>
                      </select>,
                      "className": "select-sort",
                    },
                    "ref": null,
                    "rendered": Object {
                      "instance": null,
                      "key": undefined,
                      "nodeType": "host",
                      "props": Object {
                        "children": Array [
                          <option>
                            Sort By...
                          </option>,
                          <option
                            value="Ascending"
                          >
                            Ascending
                          </option>,
                          <option
                            value="Descending"
                          >
                            Descending
                          </option>,
                        ],
                        "onChange": [Function],
                      },
                      "ref": null,
                      "rendered": Array [
                        Object {
                          "instance": null,
                          "key": undefined,
                          "nodeType": "host",
                          "props": Object {
                            "children": "Sort By...",
                          },
                          "ref": null,
                          "rendered": "Sort By...",
                          "type": "option",
                        },
                        Object {
                          "instance": null,
                          "key": undefined,
                          "nodeType": "host",
                          "props": Object {
                            "children": "Ascending",
                            "value": "Ascending",
                          },
                          "ref": null,
                          "rendered": "Ascending",
                          "type": "option",
                        },
                        Object {
                          "instance": null,
                          "key": undefined,
                          "nodeType": "host",
                          "props": Object {
                            "children": "Descending",
                            "value": "Descending",
                          },
                          "ref": null,
                          "rendered": "Descending",
                          "type": "option",
                        },
                      ],
                      "type": "select",
                    },
                    "type": "div",
                  },
                  "type": "ul",
                },
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": Array [
                      <input
                        className="form-control mr-sm-2"
                        onChange={[Function]}
                        placeholder="Input a number"
                        type="number"
                        value=""
                      />,
                      <Button
                        className="Home__btn"
                        disabled={true}
                        name="Generate"
                        onClick={[Function]}
                      />,
                      <Button
                        className="ml-3"
                        disabled={false}
                        name="Download"
                        onClick={[Function]}
                      />,
                    ],
                    "className": "form-inline",
                  },
                  "ref": null,
                  "rendered": Array [
                    Object {
                      "instance": null,
                      "key": undefined,
                      "nodeType": "host",
                      "props": Object {
                        "className": "form-control mr-sm-2",
                        "onChange": [Function],
                        "placeholder": "Input a number",
                        "type": "number",
                        "value": "",
                      },
                      "ref": null,
                      "rendered": null,
                      "type": "input",
                    },
                    Object {
                      "instance": null,
                      "key": undefined,
                      "nodeType": "function",
                      "props": Object {
                        "className": "Home__btn",
                        "disabled": true,
                        "name": "Generate",
                        "onClick": [Function],
                      },
                      "ref": null,
                      "rendered": null,
                      "type": [Function],
                    },
                    Object {
                      "instance": null,
                      "key": undefined,
                      "nodeType": "function",
                      "props": Object {
                        "className": "ml-3",
                        "disabled": false,
                        "name": "Download",
                        "onClick": [Function],
                      },
                      "ref": null,
                      "rendered": null,
                      "type": [Function],
                    },
                  ],
                  "type": "div",
                },
              ],
              "type": "div",
            },
          ],
          "type": "nav",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              false,
              <DisplayPhoneNumbers
                hasGeneratedNumbers={false}
                phoneNumbers={
                  Array [
                    Object {
                      "randomPhoneNumber": 12345,
                    },
                    Object {
                      "randomPhoneNumber": 67890,
                    },
                  ]
                }
              />,
            ],
          },
          "ref": null,
          "rendered": Array [
            false,
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "hasGeneratedNumbers": false,
                "phoneNumbers": Array [
                  Object {
                    "randomPhoneNumber": 12345,
                  },
                  Object {
                    "randomPhoneNumber": 67890,
                  },
                ],
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
          ],
          "type": "div",
        },
      ],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "legacyContextMode": "parent",
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getChildContext": Object {
            "calledByRenderer": false,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
  Symbol(enzyme.__childContext__): null,
}
`;

exports[`Home Page should mount correctly 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Home
    phoneNumbers={Array []}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "checkPropTypes": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <nav
          className="navbar navbar-expand-lg navbar-dark bg-dark"
        >
          <a
            className="navbar-brand"
            href="#"
          >
            Phone Number Generator
          </a>
           
          <button
            aria-controls="navbarTogglerDemo02"
            aria-expanded="false"
            aria-label="Toggle navigation"
            className="navbar-toggler"
            data-target="#navbarTogglerDemo02"
            data-toggle="collapse"
            type="button"
          >
            <span
              className="navbar-toggler-icon"
            />
          </button>
          <div
            className="collapse navbar-collapse"
            id="navbarTogglerDemo02"
          >
            <ul
              className="navbar-nav mr-auto mt-2 mt-lg-0"
            />
            <div
              className="form-inline"
            >
              <input
                className="form-control mr-sm-2"
                onChange={[Function]}
                placeholder="Input a number"
                type="number"
                value=""
              />
              <Button
                className="Home__btn"
                disabled={true}
                name="Generate"
                onClick={[Function]}
              />
              <Button
                className="ml-3"
                disabled={true}
                name="Download"
                onClick={[Function]}
              />
            </div>
          </div>
        </nav>,
        <div>
          <DisplayPhoneNumbers
            hasGeneratedNumbers={false}
            phoneNumbers={Array []}
          />
        </div>,
      ],
      "className": "home__container",
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <a
              className="navbar-brand"
              href="#"
            >
              Phone Number Generator
            </a>,
            " ",
            <button
              aria-controls="navbarTogglerDemo02"
              aria-expanded="false"
              aria-label="Toggle navigation"
              className="navbar-toggler"
              data-target="#navbarTogglerDemo02"
              data-toggle="collapse"
              type="button"
            >
              <span
                className="navbar-toggler-icon"
              />
            </button>,
            <div
              className="collapse navbar-collapse"
              id="navbarTogglerDemo02"
            >
              <ul
                className="navbar-nav mr-auto mt-2 mt-lg-0"
              />
              <div
                className="form-inline"
              >
                <input
                  className="form-control mr-sm-2"
                  onChange={[Function]}
                  placeholder="Input a number"
                  type="number"
                  value=""
                />
                <Button
                  className="Home__btn"
                  disabled={true}
                  name="Generate"
                  onClick={[Function]}
                />
                <Button
                  className="ml-3"
                  disabled={true}
                  name="Download"
                  onClick={[Function]}
                />
              </div>
            </div>,
          ],
          "className": "navbar navbar-expand-lg navbar-dark bg-dark",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "Phone Number Generator",
              "className": "navbar-brand",
              "href": "#",
            },
            "ref": null,
            "rendered": "Phone Number Generator",
            "type": "a",
          },
          " ",
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "aria-controls": "navbarTogglerDemo02",
              "aria-expanded": "false",
              "aria-label": "Toggle navigation",
              "children": <span
                className="navbar-toggler-icon"
              />,
              "className": "navbar-toggler",
              "data-target": "#navbarTogglerDemo02",
              "data-toggle": "collapse",
              "type": "button",
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "className": "navbar-toggler-icon",
              },
              "ref": null,
              "rendered": null,
              "type": "span",
            },
            "type": "button",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": Array [
                <ul
                  className="navbar-nav mr-auto mt-2 mt-lg-0"
                />,
                <div
                  className="form-inline"
                >
                  <input
                    className="form-control mr-sm-2"
                    onChange={[Function]}
                    placeholder="Input a number"
                    type="number"
                    value=""
                  />
                  <Button
                    className="Home__btn"
                    disabled={true}
                    name="Generate"
                    onClick={[Function]}
                  />
                  <Button
                    className="ml-3"
                    disabled={true}
                    name="Download"
                    onClick={[Function]}
                  />
                </div>,
              ],
              "className": "collapse navbar-collapse",
              "id": "navbarTogglerDemo02",
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": false,
                  "className": "navbar-nav mr-auto mt-2 mt-lg-0",
                },
                "ref": null,
                "rendered": false,
                "type": "ul",
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": Array [
                    <input
                      className="form-control mr-sm-2"
                      onChange={[Function]}
                      placeholder="Input a number"
                      type="number"
                      value=""
                    />,
                    <Button
                      className="Home__btn"
                      disabled={true}
                      name="Generate"
                      onClick={[Function]}
                    />,
                    <Button
                      className="ml-3"
                      disabled={true}
                      name="Download"
                      onClick={[Function]}
                    />,
                  ],
                  "className": "form-inline",
                },
                "ref": null,
                "rendered": Array [
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "host",
                    "props": Object {
                      "className": "form-control mr-sm-2",
                      "onChange": [Function],
                      "placeholder": "Input a number",
                      "type": "number",
                      "value": "",
                    },
                    "ref": null,
                    "rendered": null,
                    "type": "input",
                  },
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "function",
                    "props": Object {
                      "className": "Home__btn",
                      "disabled": true,
                      "name": "Generate",
                      "onClick": [Function],
                    },
                    "ref": null,
                    "rendered": null,
                    "type": [Function],
                  },
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "function",
                    "props": Object {
                      "className": "ml-3",
                      "disabled": true,
                      "name": "Download",
                      "onClick": [Function],
                    },
                    "ref": null,
                    "rendered": null,
                    "type": [Function],
                  },
                ],
                "type": "div",
              },
            ],
            "type": "div",
          },
        ],
        "type": "nav",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            false,
            <DisplayPhoneNumbers
              hasGeneratedNumbers={false}
              phoneNumbers={Array []}
            />,
          ],
        },
        "ref": null,
        "rendered": Array [
          false,
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "hasGeneratedNumbers": false,
              "phoneNumbers": Array [],
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
        ],
        "type": "div",
      },
    ],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <nav
            className="navbar navbar-expand-lg navbar-dark bg-dark"
          >
            <a
              className="navbar-brand"
              href="#"
            >
              Phone Number Generator
            </a>
             
            <button
              aria-controls="navbarTogglerDemo02"
              aria-expanded="false"
              aria-label="Toggle navigation"
              className="navbar-toggler"
              data-target="#navbarTogglerDemo02"
              data-toggle="collapse"
              type="button"
            >
              <span
                className="navbar-toggler-icon"
              />
            </button>
            <div
              className="collapse navbar-collapse"
              id="navbarTogglerDemo02"
            >
              <ul
                className="navbar-nav mr-auto mt-2 mt-lg-0"
              />
              <div
                className="form-inline"
              >
                <input
                  className="form-control mr-sm-2"
                  onChange={[Function]}
                  placeholder="Input a number"
                  type="number"
                  value=""
                />
                <Button
                  className="Home__btn"
                  disabled={true}
                  name="Generate"
                  onClick={[Function]}
                />
                <Button
                  className="ml-3"
                  disabled={true}
                  name="Download"
                  onClick={[Function]}
                />
              </div>
            </div>
          </nav>,
          <div>
            <DisplayPhoneNumbers
              hasGeneratedNumbers={false}
              phoneNumbers={Array []}
            />
          </div>,
        ],
        "className": "home__container",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <a
                className="navbar-brand"
                href="#"
              >
                Phone Number Generator
              </a>,
              " ",
              <button
                aria-controls="navbarTogglerDemo02"
                aria-expanded="false"
                aria-label="Toggle navigation"
                className="navbar-toggler"
                data-target="#navbarTogglerDemo02"
                data-toggle="collapse"
                type="button"
              >
                <span
                  className="navbar-toggler-icon"
                />
              </button>,
              <div
                className="collapse navbar-collapse"
                id="navbarTogglerDemo02"
              >
                <ul
                  className="navbar-nav mr-auto mt-2 mt-lg-0"
                />
                <div
                  className="form-inline"
                >
                  <input
                    className="form-control mr-sm-2"
                    onChange={[Function]}
                    placeholder="Input a number"
                    type="number"
                    value=""
                  />
                  <Button
                    className="Home__btn"
                    disabled={true}
                    name="Generate"
                    onClick={[Function]}
                  />
                  <Button
                    className="ml-3"
                    disabled={true}
                    name="Download"
                    onClick={[Function]}
                  />
                </div>
              </div>,
            ],
            "className": "navbar navbar-expand-lg navbar-dark bg-dark",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "Phone Number Generator",
                "className": "navbar-brand",
                "href": "#",
              },
              "ref": null,
              "rendered": "Phone Number Generator",
              "type": "a",
            },
            " ",
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "aria-controls": "navbarTogglerDemo02",
                "aria-expanded": "false",
                "aria-label": "Toggle navigation",
                "children": <span
                  className="navbar-toggler-icon"
                />,
                "className": "navbar-toggler",
                "data-target": "#navbarTogglerDemo02",
                "data-toggle": "collapse",
                "type": "button",
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "className": "navbar-toggler-icon",
                },
                "ref": null,
                "rendered": null,
                "type": "span",
              },
              "type": "button",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": Array [
                  <ul
                    className="navbar-nav mr-auto mt-2 mt-lg-0"
                  />,
                  <div
                    className="form-inline"
                  >
                    <input
                      className="form-control mr-sm-2"
                      onChange={[Function]}
                      placeholder="Input a number"
                      type="number"
                      value=""
                    />
                    <Button
                      className="Home__btn"
                      disabled={true}
                      name="Generate"
                      onClick={[Function]}
                    />
                    <Button
                      className="ml-3"
                      disabled={true}
                      name="Download"
                      onClick={[Function]}
                    />
                  </div>,
                ],
                "className": "collapse navbar-collapse",
                "id": "navbarTogglerDemo02",
              },
              "ref": null,
              "rendered": Array [
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": false,
                    "className": "navbar-nav mr-auto mt-2 mt-lg-0",
                  },
                  "ref": null,
                  "rendered": false,
                  "type": "ul",
                },
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": Array [
                      <input
                        className="form-control mr-sm-2"
                        onChange={[Function]}
                        placeholder="Input a number"
                        type="number"
                        value=""
                      />,
                      <Button
                        className="Home__btn"
                        disabled={true}
                        name="Generate"
                        onClick={[Function]}
                      />,
                      <Button
                        className="ml-3"
                        disabled={true}
                        name="Download"
                        onClick={[Function]}
                      />,
                    ],
                    "className": "form-inline",
                  },
                  "ref": null,
                  "rendered": Array [
                    Object {
                      "instance": null,
                      "key": undefined,
                      "nodeType": "host",
                      "props": Object {
                        "className": "form-control mr-sm-2",
                        "onChange": [Function],
                        "placeholder": "Input a number",
                        "type": "number",
                        "value": "",
                      },
                      "ref": null,
                      "rendered": null,
                      "type": "input",
                    },
                    Object {
                      "instance": null,
                      "key": undefined,
                      "nodeType": "function",
                      "props": Object {
                        "className": "Home__btn",
                        "disabled": true,
                        "name": "Generate",
                        "onClick": [Function],
                      },
                      "ref": null,
                      "rendered": null,
                      "type": [Function],
                    },
                    Object {
                      "instance": null,
                      "key": undefined,
                      "nodeType": "function",
                      "props": Object {
                        "className": "ml-3",
                        "disabled": true,
                        "name": "Download",
                        "onClick": [Function],
                      },
                      "ref": null,
                      "rendered": null,
                      "type": [Function],
                    },
                  ],
                  "type": "div",
                },
              ],
              "type": "div",
            },
          ],
          "type": "nav",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              false,
              <DisplayPhoneNumbers
                hasGeneratedNumbers={false}
                phoneNumbers={Array []}
              />,
            ],
          },
          "ref": null,
          "rendered": Array [
            false,
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "hasGeneratedNumbers": false,
                "phoneNumbers": Array [],
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
          ],
          "type": "div",
        },
      ],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "legacyContextMode": "parent",
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getChildContext": Object {
            "calledByRenderer": false,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
  Symbol(enzyme.__childContext__): null,
}
`;
